--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "description": "",
     "main": "./src/server.js",
     "scripts": {
-        "server": "node",
-        "start": "nodemon",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon"
     },
     "repository": {
         "type": "git",
@@ -15,6 +13,7 @@
     "author": "IsaacDSC",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "express-flash": "0.0.2",
