--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.0",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "express-flash": "0.0.2",
         "express-handlebars": "^5.1.0",
+        "express-session": "^1.17.1",
         "module-alias": "^2.2.2",
         "mysql2": "^2.1.0",
         "passport": "^0.4.1",
