--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Logs
+imagemWhatsapp.png*
 node_modules*
 logs
 *.log
@@ -6,7 +7,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-tokens
+tokens*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
