--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@models": "src/models"
     },
     "devDependencies": {
+        "nodemon": "^2.0.4",
         "sequelize-cli": "^6.2.0"
     }
 }
