--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "mysql2": "^2.1.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
+        "puppeteer": "^5.2.1",
         "sequelize": "^6.3.4",
+        "sharp": "^0.26.0",
         "venom-bot": "^1.1.4"
     },
     "_moduleAliases": {
