--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ tokens/Delivery.data.json
 src/tokens/session.data.json
 src/tokens/Delivery.data.json
 src/public/images/qrCode.png
+src/tokens/Delivery.data.json
