--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ src/tokens/session.data.json
 src/tokens/Delivery.data.json
 src/public/images/qrCode.png
 src/tokens/Delivery.data.json
+src/tokens/Delivery.data.json
