--- a/.gitignore
+++ b/.gitignore
@@ -107,8 +107,5 @@ dist
 qrCode.png
 tokens/Delivery.data.json
 tokens/Delivery.data.json
-src/tokens/session.data.json
-src/tokens/Delivery.data.json
-src/public/images/qrCode.png
-src/tokens/Delivery.data.json
-src/tokens/Delivery.data.json
+src/tokens*
+
