--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "./src/server.js",
     "scripts": {
-        "start": "nodemon"
+        "start": "nodemon",
+        "test": "true"
     },
     "repository": {
         "type": "git",
