--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "puppeteer": "^5.2.1",
         "sequelize": "^6.3.4",
         "sharp": "^0.26.0",
+        "socket.io": "^2.3.0",
         "venom-bot": "^1.1.4"
     },
     "_moduleAliases": {
