--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,8 +12,9 @@
         "@routes/*": ["src/routes/*"],
         "@Crypto/*": ["config/crytpto/Crypto/*"],
         "@Config_Json/*": ["config/JSON/Json/*"],        
-        "@helper/*": ["src/helpers/*"],
-        "@models/*": ["src/models/*"]
+        "@helpers/*": ["src/helpers/*"],
+        "@models/*": ["src/models/*"],
+        "@controller/*": ["src/controller/*"]
       }
     },
     "exclude": ["node_modules", "dist"]
