--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,7 +14,8 @@
         "@Config_Json/*": ["config/JSON/Json/*"],        
         "@helpers/*": ["src/helpers/*"],
         "@models/*": ["src/models/*"],
-        "@controller/*": ["src/controller/*"]
+        "@controller/*": ["src/controller/*"],
+        "@database/*": ["src/database/*"]
       }
     },
     "exclude": ["node_modules", "dist"]
