--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "puppeteer": "^5.2.1",
+        "rxjs": "^6.6.3",
         "sequelize": "^6.3.4",
         "sharp": "^0.26.0",
         "socket.io": "^2.3.0",
-        "venom-bot": "^1.1.4"
+        "venom-bot": "^1.6.0"
     },
     "_moduleAliases": {
         "@": "src",
