--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
     "name": "bootwhatsapp",
     "version": "1.0.0",
     "description": "",
-    "main": "./src/server.js",
+    "main": "src/server.js",
     "scripts": {
-        "start": "nodemon",
+        "lista": "pm2 list",
+        "monit": "pm2 monit",
+        "restart": "pm2 restart src/server.js",
+        "start": "pm2 start src/server.js",
+        "delete": "pm2 delete src/server.js",
         "test": "nodeTdd.reporter"
     },
     "repository": {
@@ -17,18 +21,20 @@
         "bcrypt": "^5.0.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "core-js": "^2.6.11",
         "express": "^4.17.1",
         "express-flash": "0.0.2",
         "express-handlebars": "^5.1.0",
         "express-session": "^1.17.1",
         "module-alias": "^2.2.2",
         "mysql": "^2.18.1",
-        "mysql2": "^2.1.0",
+        "mysql2": "^2.2.2",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "puppeteer": "^5.2.1",
+        "pm2": "^4.4.1",
+        "puppeteer": "^5.3.0",
         "rxjs": "^6.6.3",
-        "sequelize": "^6.3.4",
+        "sequelize": "^6.3.5",
         "sharp": "^0.26.0",
         "socket.io": "^2.3.0",
         "venom-bot": "^1.6.0"
@@ -48,8 +54,5 @@
         "@database": "src/database",
         "@public": "src/public"
     },
-    "devDependencies": {
-        "nodemon": "^2.0.4",
-        "sequelize-cli": "^6.2.0"
-    }
+    "devDependencies": {}
 }
