--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "monit": "pm2 monit",
         "restart": "pm2 restart src/server.js",
         "start": "pm2 start src/server.js",
-        "delete": "pm2 delete src/server.js",
+        "down": "pm2 delete src/server.js",
         "test": "nodeTdd.reporter"
     },
     "repository": {
@@ -19,7 +19,6 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.0",
-        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "core-js": "^2.6.11",
         "express": "^4.17.1",
@@ -27,7 +26,6 @@
         "express-handlebars": "^5.1.0",
         "express-session": "^1.17.1",
         "module-alias": "^2.2.2",
-        "mysql": "^2.18.1",
         "mysql2": "^2.2.2",
         "nodemailer": "^6.4.11",
         "passport": "^0.4.1",
