--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "express-handlebars": "^5.1.0",
         "express-session": "^1.17.1",
         "module-alias": "^2.2.2",
+        "mysql": "^2.18.1",
         "mysql2": "^2.2.2",
         "nodemailer": "^6.4.11",
         "passport": "^0.4.1",
