--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "src/server.js",
     "scripts": {
+        "server": "pm2 start src/server.js",
         "lista": "pm2 list",
         "monit": "pm2 monit",
         "restart": "pm2 restart src/server.js",
@@ -21,10 +22,12 @@
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "core-js": "^2.6.11",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-flash": "0.0.2",
         "express-handlebars": "^5.1.0",
         "express-session": "^1.17.1",
+        "mercadopago": "^1.3.2",
         "module-alias": "^2.2.2",
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
@@ -37,7 +40,7 @@
         "sequelize": "^6.3.5",
         "sharp": "^0.26.0",
         "socket.io": "^2.3.0",
-        "venom-bot": "^2.0.5"
+        "venom-bot": "^2.0.11"
     },
     "_moduleAliases": {
         "@": "src",
