--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "author": "IsaacDSC",
     "license": "ISC",
     "dependencies": {
-        "@open-wa/wa-automate": "^3.0.2",
+        "@open-wa/wa-automate": "^3.0.6",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "core-js": "^2.6.11",
@@ -40,7 +40,9 @@
         "rxjs": "^6.6.3",
         "sequelize": "^6.3.5",
         "sharp": "^0.26.1",
-        "socket.io": "^2.3.0"
+        "socket.io": "^2.3.0",
+        "to": "^0.2.9",
+        "update": "^0.7.4"
     },
     "_moduleAliases": {
         "@": "src",
